<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_layout_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_item_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownIdInLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="40" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/charactersLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/characters_left"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/charactersLeft"
        app:layout_constraintTop_toBottomOf="@+id/item_layout_input" />

    <TextView
        android:id="@+id/charactersLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/charactersLeftLabel"
        app:layout_constraintEnd_toStartOf="@id/charactersMax"
        app:layout_constraintTop_toTopOf="@id/charactersLeftLabel" />

    <TextView
        android:id="@+id/charactersMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_40"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/charactersLeftLabel"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@id/charactersLeftLabel" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/charactersMax" />

</androidx.constraintlayout.widget.ConstraintLayout>